--- a/jNettle/pom.xml
+++ b/jNettle/pom.xml
@@ -26,7 +26,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.davidgordon.jNettle.Main</mainClass>
+              <mainClass>com.davidgordon.jnettle.Main</mainClass>
             </manifest>
           </archive>
         </configuration>
