--- a/jNettle/pom.xml
+++ b/jNettle/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.davidgordon</groupId>
-    <artifactId>jNettle</artifactId>
+    <artifactId>jnettle</artifactId>
     <version>1.0</version>
 
     <properties>
