--- a/jera/pom.xml
+++ b/jera/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.davidgordon</groupId>
-    <artifactId>jnettle</artifactId>
+    <artifactId>jera</artifactId>
     <version>1.0</version>
 
     <properties>
@@ -26,7 +26,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.davidgordon.jnettle.Main</mainClass>
+              <mainClass>com.davidgordon.jera.Main</mainClass>
             </manifest>
           </archive>
         </configuration>
